--- a/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
+++ b/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
@@ -37,39 +37,38 @@
     <SkipPostSharp>False</SkipPostSharp>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentSharp.BCL, Version=5.1.1.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentSharp.BCL.5.0.80\lib\net35\FluentSharp.BCL.dll</HintPath>
+    <Reference Include="FluentSharp.BCL, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentSharp.BCL.5.0.83\lib\net35\FluentSharp.BCL.dll</HintPath>
     </Reference>
-    <Reference Include="FluentSharp.CoreLib, Version=5.1.1.1, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentSharp.CoreLib.5.0.80\lib\net35\FluentSharp.CoreLib.dll</HintPath>
+    <Reference Include="FluentSharp.CoreLib, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentSharp.CoreLib.5.0.83\lib\net35\FluentSharp.CoreLib.dll</HintPath>
     </Reference>
-    <Reference Include="FluentSharp.NGit, Version=5.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentSharp.NGit.5.0.80\lib\net40\FluentSharp.NGit.dll</HintPath>
+    <Reference Include="FluentSharp.NGit, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentSharp.NGit.5.0.83\lib\net40\FluentSharp.NGit.dll</HintPath>
     </Reference>
-    <Reference Include="FluentSharp.REPL, Version=5.1.1.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+    <Reference Include="FluentSharp.REPL, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
       <ExecutableExtension>.exe</ExecutableExtension>
-      <HintPath>..\packages\FluentSharp.REPL.5.0.80\lib\net35\FluentSharp.REPL.exe</HintPath>
+      <HintPath>..\packages\FluentSharp.REPL.5.0.83\lib\net35\FluentSharp.REPL.exe</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL" />
-    <Reference Include="Mono.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL" />
     <Reference Include="Moq">
       <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
     </Reference>
-    <Reference Include="NGit, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL" />
-    <Reference Include="NSch, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="NGit, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\TM_Website\_Temp_Dependecies\NGit.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="O2_Platform_External_SharpDevelop, Version=5.1.1.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
-      <HintPath>..\packages\O2.Platform.External.SharpDevelop.5.0.80\lib\net35\O2_Platform_External_SharpDevelop.dll</HintPath>
+    <Reference Include="O2_Platform_External_SharpDevelop, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+      <HintPath>..\packages\O2.Platform.External.SharpDevelop.5.0.83\lib\net35\O2_Platform_External_SharpDevelop.dll</HintPath>
     </Reference>
-    <Reference Include="PostSharp, Version=3.0.28.9, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
+    <Reference Include="PostSharp, Version=3.0.31.9, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\PostSharp.3.0.28\lib\net20\PostSharp.dll</HintPath>
+      <HintPath>..\packages\PostSharp.3.0.31\lib\net20\PostSharp.dll</HintPath>
     </Reference>
-    <Reference Include="Sharpen, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core">
@@ -108,7 +107,6 @@
     <Compile Include="TM_XmlDatabase\Test_Library_SaveToDisk.cs" />
     <Compile Include="TM_XmlDatabase\Test_LoadLibrariesFromDisk.cs" />
     <Compile Include="TM_XmlDatabase\Test_LoadLibraries_FromExternalSource.cs" />
-    <Compile Include="TM_XmlDatabase\Test_NGit_Support.cs" />
     <Compile Include="TM_XmlDatabase\Test_TMServer_Config.cs" />
     <Compile Include="TM_XmlDatabase\Test_TM_TestData.cs" />
     <Compile Include="TM_XmlDatabase\Test_Setup.cs" />
@@ -179,7 +177,7 @@
     <Content Include="NGit_Dlls\Sharpen.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\PostSharp.3.0.28\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.3.0.28\tools\PostSharp.targets')" />
+  <Import Project="..\packages\PostSharp.3.0.31\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.3.0.31\tools\PostSharp.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
