--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -53,17 +53,42 @@
     <SkipPostSharp>True</SkipPostSharp>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentSharp.CoreLib, Version=5.1.1.1, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentSharp.CoreLib.5.0.80\lib\net35\FluentSharp.CoreLib.dll</HintPath>
+    <Reference Include="FluentSharp.BCL, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>_Temp_Dependecies\FluentSharp.BCL.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentSharp.CoreLib, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentSharp.CoreLib.5.0.83\lib\net35\FluentSharp.CoreLib.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentSharp.NGit, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>_Temp_Dependecies\FluentSharp.NGit.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Posix">
+      <HintPath>_Temp_Dependecies\Mono.Posix.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Security">
+      <HintPath>_Temp_Dependecies\Mono.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="NGit">
+      <HintPath>_Temp_Dependecies\NGit.dll</HintPath>
+    </Reference>
+    <Reference Include="NSch">
+      <HintPath>_Temp_Dependecies\NSch.dll</HintPath>
+    </Reference>
+    <Reference Include="O2_Platform_External_SharpDevelop">
+      <HintPath>_Temp_Dependecies\O2_Platform_External_SharpDevelop.dll</HintPath>
     </Reference>
     <Reference Include="RazorEngine, Version=3.2.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
       <HintPath>..\packages\RazorEngine.3.2.0\lib\net40\RazorEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="Sharpen">
+      <HintPath>_Temp_Dependecies\Sharpen.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Abstractions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -72,12 +97,17 @@
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.Helpers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.Mvc.4.0.30506.0\lib\net40\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.Razor.2.0.30506.0\lib\net40\System.Web.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -85,9 +115,8 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Deployment.dll</HintPath>
       <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Deployment.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -95,6 +124,7 @@
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Aspx_Pages\SetLibrary.aspx" />
@@ -274,6 +304,9 @@
     <Content Include="Images\PivotHeader.jpg" />
     <Content Include="Images\RemoveAllButton.jpg" />
     <Content Include="Javascript\angularJS\1.0.5\angular.min.js" />
+    <Content Include="Javascript\bootstrap\2.2.2\bootstrap-responsive.css" />
+    <Content Include="Javascript\bootstrap\2.2.2\bootstrap.css" />
+    <Content Include="Javascript\bootstrap-ui\ui-bootstrap-tpls-0.3.0.min.js" />
     <Content Include="Javascript\bootstrap\2.2.2\bootstrap.min.js" />
     <Content Include="Javascript\bootstrap\2.3.1\css\bootstrap-responsive.css" />
     <Content Include="Javascript\bootstrap\2.3.1\css\bootstrap-responsive.min.css" />
@@ -624,6 +657,7 @@
     <Content Include="Javascript\_mappings\HomePage_JS.txt" />
     <Content Include="Javascript\_mappings\HomePage_JS_TM.txt" />
     <Compile Include="MVC\Controllers\MarkdownController.cs" />
+    <Content Include="Scripts\codemirror-ui\ui-codemirror.js" />
     <Content Include="TBot\Tests\hello.cshtml" />
     <Content Include="TBot\Tests\theTime.cshtml" />
     <Content Include="TBot\TBotMain.html" />
@@ -689,15 +723,10 @@
     <Content Include="TBot\Tbot_Admin\Reset_Razor_Templates.cshtml" />
     <Content Include="TBot\Admin\LiveData\IISSessions.cshtml" />
     <Content Include="TBot\Views\User_Activities.cshtml" />
-    <Content Include="TBot\NGit\GitStatus.cshtml" />
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="TBot\Messaging\Send_Test_Email.cshtml" />
-    <Content Include="TBot\Views\GitDiff_UserData_Commit.cshtml" />
-    <Content Include="TBot\Views\GitDiff_UserData_File.cshtml" />
-    <Content Include="TBot\Views\GitDiff_XmlDatabase_File.cshtml" />
-    <Content Include="TBot\Views\GitDiff_XmlDatabase_Commit.cshtml" />
     <Content Include="TBot\Views\User_Edit.cshtml" />
     <Content Include="TBot\Users\Users_in_CSV.cshtml" />
     <Content Include="TBot\Views\User_View.cshtml" />
@@ -720,6 +749,9 @@
     <Content Include="MVC\Views\_Layout.cshtml" />
     <Content Include="MVC\Views\Markdown_Editor.cshtml" />
     <Content Include="MVC\Views\Loggin_Needed.cshtml" />
+    <Content Include="TBot\NGit\GitDiff_UserData_Commit.cshtml" />
+    <Content Include="TBot\NGit\GitDiff_UserData_File.cshtml" />
+    <Content Include="TBot\NGit\GitStatus.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
@@ -737,6 +769,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\TempControllers\" />
+    <Folder Include="Content\codemirror-3.01\" />
+    <Folder Include="Javascript\codeMirror\" />
+    <Folder Include="_Temp_Dependecies\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
