--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -54,7 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentSharp.CoreLib, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentSharp.CoreLib.5.3.112\lib\net35\FluentSharp.CoreLib.dll</HintPath>
+      <HintPath>..\packages\FluentSharp.CoreLib.5.3.121\lib\net35\FluentSharp.CoreLib.dll</HintPath>
     </Reference>
     <Reference Include="FluentSharp.NGit, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -663,6 +663,8 @@
     <Content Include="Javascript\_mappings\HomePage_CSS.txt" />
     <Content Include="Javascript\_mappings\HomePage_JS.txt" />
     <Content Include="Javascript\_mappings\HomePage_JS_TM.txt" />
+    <Content Include="App_Code\TempControllers\GitLibraryController.cs" />
+    <Content Include="App_Code\TempControllers\_GitUserDataController.cs" />
     <Compile Include="MVC\Controllers\MarkdownController.cs" />
     <Content Include="TBot\Tests\hello.cshtml" />
     <Content Include="TBot\Tests\theTime.cshtml" />
@@ -758,6 +760,12 @@
     <Content Include="TBot\NGit\GitDiff_UserData_Commit.cshtml" />
     <Content Include="TBot\NGit\GitDiff_UserData_File.cshtml" />
     <Content Include="TBot\NGit\GitStatus.cshtml" />
+    <Content Include="Views\GitUserData\Repository.cshtml" />
+    <Content Include="Views\_Layouts\Layout_Repositories.cshtml" />
+    <Content Include="Views\_Layouts\Layout_AngularJS.cshtml" />
+    <Content Include="Views\GitUserData\File.cshtml" />
+    <Content Include="Views\GitUserData\FileContents.cshtml" />
+    <Content Include="Views\GitUserData\FileDiff.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
@@ -774,7 +782,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Code\TempControllers\" />
     <Folder Include="Javascript\codeMirror\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
