--- a/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
+++ b/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
@@ -38,20 +38,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentSharp.CoreLib, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentSharp.CoreLib.5.3.112\lib\net35\FluentSharp.CoreLib.dll</HintPath>
+      <HintPath>..\packages\FluentSharp.CoreLib.5.3.121\lib\net35\FluentSharp.CoreLib.dll</HintPath>
     </Reference>
     <Reference Include="FluentSharp.NGit, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentSharp.NGit.5.3.112\lib\net40\FluentSharp.NGit.dll</HintPath>
+      <HintPath>..\packages\FluentSharp.NGit.5.3.121\lib\net40\FluentSharp.NGit.dll</HintPath>
     </Reference>
     <Reference Include="FluentSharp.REPL, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
       <ExecutableExtension>.exe</ExecutableExtension>
-      <HintPath>..\packages\FluentSharp.REPL.5.3.112\lib\net35\FluentSharp.REPL.exe</HintPath>
+      <HintPath>..\packages\FluentSharp.REPL.5.3.121\lib\net35\FluentSharp.REPL.exe</HintPath>
     </Reference>
-    <Reference Include="FluentSharp.SharpDevelopEditor">
-      <HintPath>..\packages\FluentSharp.SharpDevelopEditor.5.3.112\lib\net35\FluentSharp.SharpDevelopEditor.dll</HintPath>
+    <Reference Include="FluentSharp.SharpDevelopEditor, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentSharp.SharpDevelopEditor.5.3.121\lib\net35\FluentSharp.SharpDevelopEditor.dll</HintPath>
     </Reference>
-    <Reference Include="FluentSharp.WinForms">
-      <HintPath>..\packages\FluentSharp.WinForms.5.3.112\lib\net35\FluentSharp.WinForms.dll</HintPath>
+    <Reference Include="FluentSharp.WinForms, Version=5.3.0.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentSharp.WinForms.5.3.121\lib\net35\FluentSharp.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
